--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "AIA",
+  "name": "aia",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.7",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,8 +16,10 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@tanstack/react-query": "^5.66.0",
     "apexcharts": "3.44.0",
     "axios": "^1.7.5",
+    "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
@@ -27,7 +29,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "6.17.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "sonner": "^1.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
